--- a/tortoise_gazebo.cfg
+++ b/tortoise_gazebo.cfg
@@ -2,7 +2,7 @@
 type = 1
 port = /dev/ttyUSB0
 count = 12
-model = tortoise
+model = tortoise_robot
 
 [servo.poses]
 idle = 0=0.00,1=0.00,2=90.00,3=0.00,4=0.00,5=90.00,6=0.00,7=0.00,8=90.00,9=0.00,10=0.00,11=90.00,12=0.00,13=0.00
@@ -142,7 +142,7 @@ static_center_factor = 3.0
 static_stable_factor = 10.0
 static_margin_mm = 35.0
 statically_stable = True
-leg_order = (0,2),(1,3)
+leg_order = 3,1,0,2
 geometry_scale_mm = 200.0
 command_x_mm_s = 0.0
 command_y_mm_s = 30.0
