--- a/tortoise_gazebo.cfg
+++ b/tortoise_gazebo.cfg
@@ -132,17 +132,17 @@ tibia_idle_deg = 90.0
 
 [gaitconfig]
 max_cycle_time_s = 3.0
-lift_height_mm = 30.0
+lift_height_mm = 20.0
 lift_percent = 25.0
 swing_percent = 70.0
 position_margin_percent = 80.0
-body_z_offset_mm = 43.0
+body_z_offset_mm = 23.0
 servo_speed_margin_percent = 70.0
 static_center_factor = 3.0
 static_stable_factor = 10.0
 static_margin_mm = 35.0
 statically_stable = True
-leg_order = 3,1,0,2
+leg_order = (0,2),(1,3)
 geometry_scale_mm = 200.0
 command_x_mm_s = 0.0
 command_y_mm_s = 20.0
