--- a/tortoise_gazebo.cfg
+++ b/tortoise_gazebo.cfg
@@ -142,7 +142,7 @@ static_center_factor = 3.0
 static_stable_factor = 10.0
 static_margin_mm = 35.0
 statically_stable = True
-leg_order = (0,2),(1,3)
+leg_order = 3,1,0,2
 geometry_scale_mm = 200.0
 command_x_mm_s = 0.0
 command_y_mm_s = 20.0
